# figrecipe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GUI_EDITOR_IMPLEMENTATION.md  KNOWN_ISSUES.md  Makefile  README.md  REFACTORING.md  current-snapshot.yml  eslint.config.js  feature-mm-based-composition  feature-raw-image-support  pyproject.toml
.dev/: test_editor.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cla.yml  gallery.yml  publish-pypi.yml  test.yml
.old/: README_v02.md
.playwright-cli/: page-2026-03-15T08-22-19-149Z.yml  page-2026-03-15T08-23-49-414Z.yml  page-2026-03-15T08-41-00-447Z.yml  page-2026-03-15T08-41-20-186Z.yml  page-2026-03-15T08-41-37-984Z.yml  page-2026-03-15T08-48-52-374Z.yml  page-2026-03-15T09-12-35-500Z.yml  page-2026-03-15T09-12-56-930Z.yml  page-2026-03-15T09-16-48-083Z.yml  page-2026-03-15T09-28-35-611Z.yml  page-2026-03-15T09-55-21-663Z.yml  page-2026-03-15T09-58-44-189Z.yml  page-2026-03-15T10-01-47-084Z.yml  page-2026-03-15T10-02-12-226Z.yml  page-2026-03-15T10-05-44-109Z.yml  page-2026-03-15T10-11-04-917Z.yml  page-2026-03-15T10-47-25-366Z.yml  page-2026-03-15T10-47-48-553Z.yml  page-2026-03-15T10-48-17-300Z.yml  page-2026-03-15T11-51-32-097Z.yml  page-2026-03-15T12-09-30-793Z.yml  page-2026-03-15T12-16-38-648Z.yml  page-2026-03-15T15-52-35-356Z.yml  page-2026-03-15T19-10-29-552Z.yml  page-2026-03-15T19-11-10-478Z.yml  page-2026-03-15T19-15-33-064Z.yml  page-2026-03-15T19-51-05-277Z.yml  page-2026-03-15T19-51-43-365Z.yml  page-2026-03-15T19-52-11-372Z.yml  page-2026-03-15T19-52-39-432Z.yml  page-2026-03-15T20-06-05-020Z.yml  page-2026-03-15T21-12-05-303Z.yml  page-2026-03-15T21-16-00-538Z.yml  page-2026-03-15T21-17-39-929Z.yml  page-2026-03-15T21-31-16-395Z.yml  page-2026-03-15T21-51-41-551Z.yml  page-2026-03-15T21-52-18-041Z.yml  page-2026-03-15T21-52-39-627Z.yml  page-2026-03-15T22-02-46-931Z.yml  page-2026-03-15T23-03-05-812Z.yml  (+44 more)
docs/: 03_TERMINOLOGY.md  ISSUES_TO_FIX.md  SCITEX_APP_INTEGRATION.md  figrecipe_concept.py  layout_and_cropping.md  scitex-app-and-ui.md  scitex_style_anatomy.py
docs/02_MATPLOTLIB_OFFICIAL/: analytomy_of_a_figure.py
docs/bgm/: README.md
docs/sphinx/: cli_reference.rst  conf.py  gallery.rst  generate_images.py  index.rst  installation.rst  mcp_spec.rst  quickstart.rst  style_reference.rst  terminology.rst
examples/: 00_run_all.sh  01_all_plots.py  01_basic_usage.py  01_bundle_format.ipynb  01_bundle_format.py  01_roundtrip_basic.py  02_compose_and_reproduce.py  02_composition.py  02_plot_and_reproduce_all.py  02_roundtrip_scatter.py  02a_composition.py  02b_composition_mm.py  03_composition.py  03_editor.py  03_roundtrip_bar.py  03_statistical_notations_and_captions.py  03_style_anatomy.py  04_mcp.org  04_roundtrip_hist.py  04_statistical_annotations.py  04_style_scitex_anatomy.py  05_csv_workflow.py  05_seaborn.py  05_style_change.py  06_diagram.py  06_gui_editor.py  06_mm_layout.py  06_mm_layout_and_style.py  06_style_switching.py  07_csv_workflow.py  07_diagram.py  07_figrecipe_concept_diagram.py  07_style.py  08_diagram.py  08_figrecipe_workflow.py  09_cli_commands.sh  09_diagram.py  09a_diagram.py  09a_schematic.py  09b_diagram_NG_patterns.py  (+26 more)
examples/01_all_plots_out/: plot_acorr.yaml  plot_angle_spectrum.yaml  plot_bar.yaml  plot_barbs.yaml  plot_barh.yaml  plot_boxplot.yaml  plot_cohere.yaml  plot_contour.yaml  plot_contourf.yaml  plot_csd.yaml  plot_ecdf.yaml  plot_errorbar.yaml  plot_eventplot.yaml  plot_fill.yaml  plot_fill_between.yaml  plot_fill_betweenx.yaml  plot_graph.yaml  plot_hexbin.yaml  plot_hist.yaml  plot_hist2d.yaml  plot_imshow.yaml  plot_loglog.yaml  plot_magnitude_spectrum.yaml  plot_matshow.yaml  plot_pcolor.yaml  plot_pcolormesh.yaml  plot_phase_spectrum.yaml  plot_pie.yaml  plot_plot.yaml  plot_psd.yaml  plot_quiver.yaml  plot_scatter.yaml  plot_semilogx.yaml  plot_semilogy.yaml  plot_specgram.yaml  plot_spy.yaml  plot_stackplot.yaml  plot_stairs.yaml  plot_stem.yaml  plot_step.yaml  (+7 more)
examples/03_style_anatomy_out/: scitex_anatomy.json  scitex_anatomy.yaml
examples/04_style_scitex_anatomy_out/: scitex_anatomy.json
examples/05_csv_workflow_out/: csv_workflow_demo.yaml  experiment_data.csv  group_comparison.csv  python_api_demo.yaml
examples/05_style_anatomy_out/: scitex_anatomy.json
examples/06_diagram_out/: decision_tree.mmd  neural_net.mmd  neural_net_spec.yaml  pipeline.yaml  scientific_workflow.mmd
examples/07_diagram_out/: decision_tree.mmd  neural_net.mmd  pipeline.dot  pipeline.mmd  scientific_workflow.mmd
examples/07_figrecipe_concept_diagram_out/: figrecipe_workflow.mmd  mcp_integration.mmd  recipe_structure.mmd
examples/07_video_demos/: 02_change_color.py  05_panel_drag.py  06_file_browser.py  add_narration.py
examples/08_diagram_out/: decision_tree.mmd  pipeline.dot  pipeline.mmd
examples/99_video_demos/: 01_enable_dark_mode.py  03_datatable_import.py
scripts/: gui_periodic.sh  restart_gui.sh
src/figrecipe/: _graph.py  (+18 more)
tests/: .test_demo_plotters.py.bak  __init__.py  conftest.py  test_alignment.py  test_autofix.py  test_axis_helpers.py  test_branding.py  test_caption_generation.py  test_captions.py  test_cli.py  test_compose_freeform.py  test_compose_solvers.py  test_composition.py  test_constrained_layout.py  test_csv_column_support.py  test_csv_format.py  test_data_serialization.py  test_diagram.py  test_diagram_boxes.py  test_editor_browser.py  test_editor_contourf.py  test_editor_dark_mode.py  test_editor_datatable.py  test_editor_edit_variants.py  test_editor_file_browser.py  test_editor_hitmap.py  test_editor_image_drop.py  test_editor_image_drop_formats.py  test_editor_image_drop_recording.py  test_editor_image_drop_url.py  test_editor_layout_stability.py  test_editor_new_figure.py  test_editor_panel_drag.py  test_editor_panel_drag_snapshot.py  test_editor_panel_snap.py  test_editor_pie_colors.py  test_editor_preferences.py  test_editor_selection_features.py  test_editor_undo_redo.py  test_graph.py  (+23 more)
(+1649 files in other folders)
