[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotspec"
version = "0.1.0"
description = "Record and reproduce matplotlib figures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "matplotlib",
    "reproducibility",
    "visualization",
    "scientific",
    "plotting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "ruamel.yaml>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
imaging = [
    "Pillow>=9.0.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/plotspec"
Documentation = "https://github.com/ywatanabe1989/plotspec#readme"
Repository = "https://github.com/ywatanabe1989/plotspec.git"
Issues = "https://github.com/ywatanabe1989/plotspec/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plotspec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
