[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figrecipe"
version = "0.28.4"
description = "Reproducible matplotlib wrapper with mm-precision layouts"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "matplotlib",
    "reproducibility",
    "visualization",
    "scientific",
    "plotting",
    "publication",
    "recipe",
    "yaml",
    "millimeter",
    "scitex",
    "figrecipe",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "PyYAML>=6.0.0",
    "ruamel.yaml>=0.17.0",
    "scipy>=1.7.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.5.0",
    "pyyaml>=6.0.0",
    "scitex-dev>=0.7.0",
]
imaging = [
    "Pillow>=9.0.0",
]
seaborn = [
    "seaborn>=0.12.0",
    "pandas>=1.3.0",
]
scitex = [
    "scitex",
    "scitex-app>=0.1.0",
    "scitex-ui>=0.1.0",
]
editor = [
    "django>=4.2.0",
    "Pillow>=9.0.0",
]
app = [
    "django>=4.2.0",
    "Pillow>=9.0.0",
    "scitex-app>=0.1.0",
    "scitex-ui>=0.1.0",
]
desktop = [
    "django>=4.2.0",
    "Pillow>=9.0.0",
    "pywebview>=4.0.0",
    "qtpy>=2.0.0",
    "PyQt6>=6.0.0",
    "PyQt6-WebEngine>=6.0.0",
]
demo = [
    "playwright>=1.40.0",
    "pytesseract>=0.3.0",
]
graph = [
    "networkx>=3.0",
]
graph-interactive = [
    "networkx>=3.0",
    "pyvis>=0.3",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
mcp = [
    "fastmcp>=2.0",
]
all = [
    "figrecipe[dev,docs,graph-interactive,mcp]",
    "pyyaml>=6.0.0",
    "Pillow>=9.0.0",
    "seaborn>=0.12.0",
    "pandas>=1.3.0",
    "django>=4.2.0",
    "pywebview>=4.0.0",
    "playwright>=1.40.0",
    "pytesseract>=0.3.0",
]

[project.scripts]
figrecipe = "figrecipe._cli:main"

[project.entry-points."scitex_dev.docs"]
figrecipe = "figrecipe"

[project.entry-points."scitex_dev.skills"]
figrecipe = "figrecipe"

[project.entry-points."scitex_linter.plugins"]
figure = "figrecipe._linter_plugin:get_plugin"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/figrecipe"
Documentation = "https://github.com/ywatanabe1989/figrecipe#readme"
Repository = "https://github.com/ywatanabe1989/figrecipe.git"
Issues = "https://github.com/ywatanabe1989/figrecipe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/figrecipe"]
exclude = [
    "src/figrecipe/_django/frontend/node_modules",
    "src/figrecipe/_django/frontend/src",
    "src/figrecipe/_django/frontend/package*.json",
    "src/figrecipe/_django/frontend/tsconfig*.json",
    "src/figrecipe/_django/frontend/vite.config.ts",
    "src/figrecipe/_django/frontend/eslint.config.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["figrecipe"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/figrecipe/_cli/*",
    "*/figrecipe/_editor/*",
    "*/figrecipe/_dev/*",
    "*/figrecipe/_scitex_compat/*",
    "*/figrecipe/_mcp/*",
    "*/figrecipe/_django/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/figrecipe/__init__.py" = ["E402", "F401"]
"src/figrecipe/_scitex_compat/_csv_formatters/__init__.py" = ["F401"]
"src/figrecipe/_scitex_compat/_csv_formatters/_export_as_csv.py" = ["E402"]
"src/figrecipe/_scitex_compat/_csv_formatters/*.py" = ["F841", "E722"]
